<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cancel_request"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:text="@string/cancellation_fee"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:text="@string/cancel_reason"
        android:textSize="@dimen/text_size_18" />

    <EditText
        android:id="@+id/edit_txt_reason"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_dimens_100"
        android:layout_marginTop="@dimen/common_dimens_5"
        android:background="@drawable/border_edit_txt"
        android:gravity="top|left"
        android:hint="@string/write_msg"
        android:padding="@dimen/dimen_10sp"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_confirm_cancel_req"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_16"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/dismiss"
            android:textColor="@color/colorLightGrey"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_dismiss"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_size_16"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/cancel_request_confirm"
            android:textColor="@color/colorTextBlue"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>