<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.synerzip.recircle_android.ui.SignUpActivity">

    <include layout="@layout/partial_toolbar" />

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">
    <ScrollView
        android:id="@+id/layout_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/first_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/last_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:password="true"
                    android:id="@+id/edit_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_signup_mob_no"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_mob_no"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_40dp"
                        android:hint="@string/mobile" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/txt_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/input_layout_signup_mob_no"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:gravity="center"
                    android:onClick="btnSendCode"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:text="Send Code"
                    android:textColor="@color/colorTextBlue"
                    android:textSize="@dimen/dimen_14sp" />

            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_signup_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText

                    android:id="@+id/edit_otp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/verification_code" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_user_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_60dp"
                android:layout_marginRight="@dimen/dimen_60dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/round_button"
                android:onClick="btnSignUp"
                android:text="@string/sign_up"
                android:textColor="@color/common_white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_acc"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_log_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:onClick="txtLogIn"
                    android:text="@string/log_in"
                    android:textColor="@color/colorTextBlue" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include
        android:id="@+id/progress_bar"
        layout="@layout/progress_bar_layout"
        android:animateLayoutChanges="true"
        android:visibility="gone" />
</FrameLayout>
</LinearLayout>
