<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_expanded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_dark"
    android:layout_marginBottom="@dimen/common_dimens_10"
    android:orientation="vertical">


    <AutoCompleteTextView
        android:id="@+id/auto_txt_search_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_dimens_10"
        android:background="@drawable/edittxt_square"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="@dimen/dimen_10dp"
        android:hint="@string/hintForSearchItem"
        android:padding="@dimen/common_dimens_10" />

    <EditText
        android:id="@+id/edt_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_dimens_10"
        android:background="@drawable/edittxt_square"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="@dimen/common_dimens_10"
        android:focusable="false"
        android:hint="@string/city_name"
        android:padding="@dimen/common_dimens_10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/common_dimens_10">

        <EditText
            android:id="@+id/edt_enter_dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="@dimen/dimen_10dp"
            android:focusable="false"
            android:padding="@dimen/common_dimens_10"
            android:background="@drawable/edittxt_square"
            android:hint="@string/enter_dates"
            android:onClick="btnEnterDates"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_search"
        android:layout_width="@dimen/common_dimens_150"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/common_dimens_10"
        android:background="@drawable/round_button"
        android:onClick="callSearchApi"
        android:text="@string/search"
        android:textColor="@color/common_white"
        android:textSize="@dimen/text_size_16" />


</LinearLayout>